[tool.poetry]
name = "gpt-dev-test"
version = "0.1.0"
description = "Projeto de testes com ChatGPT, VSCode, GitHub e Poetry"
authors = ["Israel Monteiro <israel.santosmonteiro@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
